Fixed alignment of legal disclaimer on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,7 @@
   display: flex;
   justify-content: center;
   color: gray;
+  text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
 }
